--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -44,13 +44,13 @@
         android:layout_width="162dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="14dp"
         android:text="Synopsis"
         android:textColor="@color/gris_claro"
         android:textSize="11sp"
-        tools:text="fecha"
         app:layout_constraintStart_toEndOf="@+id/portada"
-        app:layout_constraintTop_toBottomOf="@+id/txt_gameName" />
+        app:layout_constraintTop_toBottomOf="@+id/tag3"
+        tools:text="fecha" />
 
 
     <TextView
@@ -72,13 +72,13 @@
         android:id="@+id/textPlatform"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginStart="14dp"
+        android:gravity="center"
         android:text="Platforms"
         android:textColor="@color/white"
-        android:textSize="10sp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
+        android:textSize="13sp"
+
         app:layout_constraintStart_toEndOf="@+id/portada"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,14 +87,16 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+
         android:background="@drawable/rounded_text_box_purple"
         android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
         android:textSize="10sp"
-        android:padding="5dp"
 
         app:layout_constraintEnd_toStartOf="@id/plat2"
-        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toEndOf="@+id/portada"
         app:layout_constraintTop_toBottomOf="@+id/textPlatform"
         tools:text="plataforma" />
@@ -104,9 +106,11 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_text_box_purple"
-        android:padding="5dp"
+        android:layout_marginStart="10dp"
 
+        android:background="@drawable/rounded_text_box_purple"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
         android:textSize="10sp"
         android:gravity="center"
@@ -121,31 +125,125 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+
         android:textColor="@color/white"
         android:textSize="10sp"
         android:gravity="center"
         android:background="@drawable/rounded_text_box_purple"
-        android:padding="5dp"
-
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         tools:text="plataforma"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/plat2"
         app:layout_constraintTop_toBottomOf="@+id/textPlatform" />
+
 
     <TextView
         android:id="@+id/plat4"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+
         android:background="@drawable/rounded_text_box_purple"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/white"
         android:textSize="10sp"
-        android:layout_marginTop="10dp"
-        android:padding="3dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
+
+
         app:layout_constraintStart_toEndOf="@+id/portada"
         app:layout_constraintTop_toBottomOf="@+id/plat1"
         tools:text="plataforma" />
+
+    <TextView
+        android:id="@+id/textTags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="14dp"
+        android:text="Tags"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+
+
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toBottomOf="@+id/plat4" />
+
+    <TextView
+        android:id="@+id/tag1"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_text_box_purple"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+
+        app:layout_constraintEnd_toStartOf="@id/tag2"
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toBottomOf="@+id/textTags"
+        app:layout_constraintBottom_toTopOf="@id/tag3"
+        tools:text="tag" />
+
+    <TextView
+        android:id="@+id/tag2"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+
+        android:background="@drawable/rounded_text_box_purple"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:gravity="center"
+
+        app:layout_constraintStart_toEndOf="@+id/tag1"
+        app:layout_constraintTop_toBottomOf="@+id/textTags"
+        tools:text="tag" />
+
+    <TextView
+        android:id="@+id/tag3"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/rounded_text_box_purple"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+
+
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toBottomOf="@+id/tag1"
+        tools:text="tag" />
+
+    <TextView
+        android:id="@+id/tag4"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/rounded_text_box_purple"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+
+
+        app:layout_constraintStart_toEndOf="@+id/tag3"
+        app:layout_constraintTop_toBottomOf="@+id/tag1"
+        tools:text="tag" />
 
 
     <TextView
