--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,9 +49,106 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:gravity="center"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/roundedProfileImageView" />
+        app:layout_constraintTop_toBottomOf="@+id/roundedProfileImageView"
+        tools:text="Nickname"/>
+
+    <TextView
+        android:id="@+id/text_bio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_bio"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:padding="20dp"
+        android:textColor="@color/gris_claro"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_nickname"
+        tools:text="biografia" />
+
+    <ImageView
+        android:id="@+id/cajaInvertida"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/rounded_list_data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/separador" />
+
+    <ImageView
+        android:id="@+id/separador"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:background="@color/azul"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_bio" />
+
+    <TextView
+        android:id="@+id/txt_playing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Playing"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/cajaInvertida"
+        app:layout_constraintTop_toBottomOf="@+id/separador"
+        app:layout_constraintEnd_toStartOf="@id/txt_completed"/>
+
+    <TextView
+        android:id="@+id/txt_completed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Completed"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+
+        app:layout_constraintStart_toEndOf="@+id/txt_playing"
+        app:layout_constraintTop_toBottomOf="@+id/separador"
+        app:layout_constraintEnd_toStartOf="@id/txt_dropped"/>
+
+    <TextView
+        android:id="@+id/txt_dropped"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dropped"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+
+        app:layout_constraintStart_toEndOf="@+id/txt_completed"
+        app:layout_constraintTop_toBottomOf="@+id/separador"
+        app:layout_constraintEnd_toStartOf="@id/txt_wishlist"/>
+
+    <TextView
+        android:id="@+id/txt_wishlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wishlist"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+
+        app:layout_constraintStart_toEndOf="@+id/txt_dropped"
+        app:layout_constraintTop_toBottomOf="@+id/separador"
+        app:layout_constraintEnd_toEndOf="@id/cajaInvertida"/>
+
+
 
 
 
