--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,13 +54,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/roundedProfileImageView"
         tools:text="Nickname"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_edit_square"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toBottomOf="@id/roundedProfileImageView"
+        app:layout_constraintStart_toEndOf="@id/txt_nickname"/>
 
     <TextView
         android:id="@+id/text_bio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_bio"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:padding="20dp"
@@ -79,6 +87,7 @@
         android:layout_marginEnd="30dp"
         android:src="@drawable/rounded_list_data"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/separador" />
 
@@ -147,6 +156,61 @@
         app:layout_constraintStart_toEndOf="@+id/txt_dropped"
         app:layout_constraintTop_toBottomOf="@+id/separador"
         app:layout_constraintEnd_toEndOf="@id/cajaInvertida"/>
+
+    <TextView
+        android:id="@+id/txt_numPlaying"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="3"
+        android:textColor="@color/gris_claro"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txt_playing"
+        app:layout_constraintStart_toStartOf="@+id/txt_playing"
+        app:layout_constraintTop_toBottomOf="@+id/txt_playing" />
+
+    <TextView
+        android:id="@+id/txt_numCompleted"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="26"
+        android:textColor="@color/gris_claro"
+        android:textSize="12sp"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="@+id/txt_completed"
+        app:layout_constraintStart_toStartOf="@+id/txt_completed"
+        app:layout_constraintTop_toBottomOf="@+id/txt_completed" />
+
+    <TextView
+        android:id="@+id/txt_numDropped"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="5"
+        android:textColor="@color/gris_claro"
+        android:textSize="12sp"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="@+id/txt_dropped"
+        app:layout_constraintStart_toStartOf="@+id/txt_dropped"
+        app:layout_constraintTop_toBottomOf="@+id/txt_dropped" />
+
+    <TextView
+        android:id="@+id/txt_numWishlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="32"
+        android:textColor="@color/gris_claro"
+        android:textSize="12sp"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="@+id/txt_wishlist"
+        app:layout_constraintStart_toStartOf="@+id/txt_wishlist"
+        app:layout_constraintTop_toBottomOf="@+id/txt_wishlist" />
 
 
 
