--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,6 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/roundedProfileImageView"
         tools:text="Nickname"/>
     <ImageView
+        android:id="@+id/icon_editNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_edit_square"
